diss: isipta11 weighted inference, and credits for isipta11 and jstp in overview

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -628,6 +628,15 @@
     Title = {Robust Statistics: The Approach Based on Influence Functions},
     Year = {1986}}
 
+@article{1998:coolen,
+    Author = {Coolen, F.},
+    Journal = {Statistics \& Probability Letters},
+    Pages = {349--357},
+    Title = {Low structure imprecise predictive inference for {B}ayes' problem},
+    Volume = {36},
+    Year = {1998}}
+
+
 
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
