--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -337,3 +337,20 @@ Type = {Technical {R}eport},
 Year = {1999}
 }
 
+@article{2003:hjort,
+    Author = {N.L. Hjort and G. Claeskens},
+    Journal = {Journal of the American Statistical Association},
+    Pages = {879--899},
+    Title = {Frequentist model average estimators},
+    Volume = {98},
+    Year = {2003}}
+
+@article{2003:longford,
+    Author = {N.T. Longford},
+    Journal = {Statistics and Computing},
+    Pages = {67--80},
+    Title = {An alternative to model selection in ordinary regression},
+    Volume = {13},
+    Year = {2003}}
+
+
