--- a/intro.tex
+++ b/intro.tex
@@ -50,11 +50,20 @@ which was written primarily by Gero Walter.****
 ***Section~\ref{sec:jstp} is an abriged version of \textcite{Walter2009a},
 with a slight change of notation towards the one introduced in Section~\ref{sec:regularconjugates}
 (most importantly, writing $\nn$ and $\yn$ for the canonical posterior parameters
-instead of $n^{(1)}$ and $y^{(1)}$, respectively).***
+instead of $n^{(1)}$ and $y^{(1)}$, respectively).
+This paper was the result of a collaborative work, where both authors contributed
+more or less in equal parts. While Gero Walter contributed central concepts and basic ideas,
+along with the theoretical results, Thomas Augustin devised most of the structure,
+and contributed most in the introductory and concluding sections.***
 
 ***Section~\ref{sec:isipta11} consists of \textcite{Walter2011a},
-again with  aslight change of notation for consistency with the rest of the material.
-Specifically, the success probability in Bernoulli trials is denoted by $\theta$ instead of $p$.***
+again with a slight change of notation for consistency with the rest of the material.
+Specifically, the success probability in Bernoulli trials is denoted by $\theta$ instead of $p$.
+In this work, Section~\ref{sec:ibbm} was devised and written primarily by Gero Walter,
+while Section~\ref{sec:weightedinf} was devised and written primarily by Frank Coolen.
+Here, it was possible to add a few explanatory paragraphs that could not appear in the original publication. 
+Thomas Augustin contributed substantially to all parts of the manuscript,
+especially in the introductory and concluding sections.***
 
 \section{Notation}
 \label{sec:notation}
