diss: isipta11 insights section

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -636,6 +636,24 @@
     Volume = {36},
     Year = {1998}}
 
+@ARTICLE{2009:Troffaes:Coolen,
+  author = {Troffaes, M.C.M. and Coolen, F.P.A.},
+  title = {Applying the Imprecise {D}irichlet Model in cases with partial observations
+    and dependencies in failure data},
+  journal = {International Journal of Approximate Reasoning},
+  year = {2009},
+  volume = {50},
+  pages = {257--268}
+}
+
+@article{2002:augustin,
+    Author = {Augustin, T.},
+    Journal = {Journal of Statistical Planning and Inference},
+    Pages = {149--173},
+    Title = {Neyman-{P}earson testing under interval probability by globally least favorable pairs: {R}eviewing {H}uber-{S}trassen theory and extending it to general interval probability},
+    Volume = {105},
+    Year = {2002}}
+
 
 
 @incollection{itip-desirable,
