--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -353,4 +353,21 @@ Year = {1999}
     Volume = {13},
     Year = {2003}}
 
+@article{2007:utkinaugustin,
+     Author = {Utkin, L.V. and Augustin, T.},
+     Journal = {International Journal of Approximate Reasoning},
+     Number = {3},
+     Pages = {322--338},
+     Title = {Decision making under imperfect measurement using the imprecise {D}irichlet model.},
+     Volume = {44},
+     Year = {2007}}
+
+@inproceedings{2009:hampel:knowledge,
+    Author = {F. Hampel},
+    Booktitle = {ISIPTA '09: Proc.\ of the Sixth International Symposium on Imprecise Probabilities: Theories and Applications},
+    Editor = {T. Augustin and F.P.A. Coolen and S. Moral and M.C.M. Troffaes},
+    pages = {219--227},
+    Title = {How can we get new knowledge?},
+    Year = {2009}}
+
 
