diss: isipta11 insights section

--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -126,7 +126,7 @@ where the set of priors is spanned by normal distributions with a fixed mean $\y
 This type of model is first discussed in \textcite[\S 5.4.3]{1991:walley} for the Beta-Bernoulli model,
 and was later generalised by \textcite{Walter2009a}
 to sample distributions of the canonical exponential form \eqref{eq:expofam-sampledens}.
-We will discuss and ilustrate this model in Section~****.
+We will discuss and illustrate this model in Section~\ref{sec:jstp}.
 It should be noted here that while the prior parameter set is a Cartesian product of $\NZ = [\nzl, \nzu]$ and $\YZ$,
 the posterior parameter set is not.
 This is due to Eq.~\eqref{eq:canonicalupdate},
@@ -440,8 +440,9 @@ Indeed, \eqref{eq:deltay} can then be written as
 such that we have the same $\Delta_y(\PN)$ as for a model with $\PZ = \YZ \times \nzu$ when $\ttau(\x) \in \YZ$,
 whereas $\Delta_y(\PN)$ increases if $\ttau(\x) \notin \YZ$, the increase depending on the distance of $\ttau(\x)$ to $\YZ$,
 as well as on $\nzl$, $\nzu$, and $n$.
-This model is described in more detail in Section ***, along with illustrative examples
-(see Figure~*** for the Dirichlet-Multinomial model, and Figure~*** for the Normal-Normal model).
+This model is described in more detail in Section~\ref{sec:jstp}, along with illustrative examples
+(see Figure~\ref{fig:idm-nvar-nopdc} for the Dirichlet-Multinomial model,
+and Figure~\ref{fig:nv-nvar-vertfu} for the Normal-Normal model).
 
 %\begin{figure}
 %\centering
@@ -523,7 +524,6 @@ which were already used in \textcite{Walter2007a} to generalize Bayesian linear 
 
 ****more on parameter set shapes? refer to ISIPTA'11 and boatshape sections****
 
-***Festschrift paper \parencite{Walter2010a} somewhere here or in Appendix?***
 
 
 
